feat: add sign in guest api
